fix: contrast issues with btn text and bg

--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@
   }
 
   .btn-cta {
-    @apply bg-secondary-three text-neutral-two hover:bg-secondary-one active:bg-secondary-one active:inset-shadow-sm;
+    @apply bg-secondary-three text-neutral-two-dark hover:bg-secondary-one active:bg-secondary-one active:inset-shadow-sm;
   }
 
   .btn-draggable {
@@ -157,7 +157,7 @@
   }
 
   .btn-secondary {
-    @apply bg-neutral-five text-secondary-one hover:bg-neutral-six active:bg-neutral-six active:inset-shadow-sm;
+    @apply bg-neutral-two text-secondary-one border-2 border-solid border-secondary-one hover:bg-neutral-six active:bg-neutral-six active:inset-shadow-sm;
   }
 
   /* ── Size ── */
